Revert "Merge branch 'main' of https://github.com/newbe36524/Amazing-Favorites into fork"
This reverts commit 5337eb8b73130a232f3ffff4611a3897b7f2ab0f, reversing
changes made to 049a007ab93b21ad2289eadb43a59f7a20c8d75e.

--- a/src/Newbe.BookmarkManager/Components/NotificationCenter.razor
+++ b/src/Newbe.BookmarkManager/Components/NotificationCenter.razor
@@ -1,12 +1,12 @@
 ﻿@using Newbe.BookmarkManager.Services
-<Popover Placement="@Placement.Bottom"
-         Trigger="@(Array.Empty<Trigger>())" Visible="@NotificationCenterCore.NewMessage">
+<Popover Placement="@PlacementType.Bottom"
+         Trigger="@(Array.Empty<TriggerType>())" Visible="@NotificationCenterCore.NewMessage">
     <ContentTemplate>
         👋 new message
     </ContentTemplate>
     <ChildContent>
-        <Popover Placement="@Placement.Bottom"
-                 Trigger="@(new[] { AntDesign.Trigger.Click })">
+        <Popover Placement="@PlacementType.Bottom"
+                 Trigger="@(new[] { AntDesign.TriggerType.Click })">
             <ChildContent>
                 <Badge Dot="NotificationCenterCore.RedDot">
                     <Button OnClick="ClickNotificationCenterAsync">
