--- a/src/Newbe.BookmarkManager/Components/TagInput.razor
+++ b/src/Newbe.BookmarkManager/Components/TagInput.razor
@@ -44,9 +44,31 @@ else
     [Parameter]
     public string[] Options { get; set; } = Array.Empty<string>();
 
+    private readonly Subject<string> _newValueSubject = new();
+
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
+        _newValueSubject
+            .DistinctUntilChanged()
+            .Buffer(TimeSpan.FromMilliseconds(10), 10)
+            .Where(x => x.Count > 0)
+            .Select(x => x.FirstOrDefault(s => !string.IsNullOrWhiteSpace(s)))
+            .Subscribe(async value =>
+            {
+                var created = await FireCreateTagAsync(value);
+                if (created)
+                {
+                    IsAdding = true;
+                    _value = string.Empty;
+                    await ValueRef.Ref.FocusAsync();
+                }
+                else
+                {
+                    IsAdding = false;
+                }
+                StateHasChanged();
+            });
     }
 
     private void OnClickAddTagAsync()
@@ -59,21 +81,9 @@ else
         });
     }
 
-    private async Task OnCreatingTag(AutoCompleteOption? option)
+    private void OnCreatingTag(AutoCompleteOption? option)
     {
-        var value = option?.Value?.ToString() ?? _value;
-        var created = await FireCreateTagAsync(value);
-        if (created)
-        {
-            IsAdding = true;
-            _value = string.Empty;
-            await ValueRef.Ref.FocusAsync();
-        }
-        else
-        {
-            IsAdding = false;
-        }
-        StateHasChanged();
+        _newValueSubject.OnNext(option?.Value?.ToString() ?? _value);
     }
 
     private async Task<bool> FireCreateTagAsync(string? value)
