--- a/src/Newbe.BookmarkManager/_Imports.razor
+++ b/src/Newbe.BookmarkManager/_Imports.razor
@@ -13,6 +13,5 @@
 @using Newbe.BookmarkManager.Components.CloudSyncButtons
 @using Newbe.BookmarkManager.Components.ControlSubPanel
 @using Newbe.BookmarkManager.Components.NotificationCenterTemplates
-@using BlazorApplicationInsights
+@using BlazorApplicationInsights;
 @using Microsoft.AspNetCore.Components.Authorization
-@attribute [Excubo.Generators.Blazor.GenerateSetParametersAsync]
